test/src/e2e_vm_tests/test_programs/should_pass/test_abis/get_storage_key_abi/src/main.sw
library get_storage_key_abi;

abi TestContract {
    fn from_f1() -> b256;
    fn from_f2() -> b256;
    fn from_f3() -> b256;
    fn from_f4() -> b256;
    fn from_callers() -> (b256, b256, b256, b256);
}
