test/src/e2e_vm_tests/test_programs/should_fail/imports_implicitly_public/script/src/internal_mod.sw
library;

pub mod internal_submod;

pub fn internal_mod_foo() -> u32 {
    42
}
